# MicaClientpp

./: .gitignore  CMakeLists.txt  README.md  backup.json  cmakecompile.sh  codecounter.sh  compile.sh  config.json  defaultTheme.json  gppcompile.sh  main  main.cpp  messages.json  oldMicasendTheme.json  old_backup.json  save_backup.json  testaes.cpp
images/: banner.jpg.kra  colored-mcpplogo-large.txt  colored-mcpplogo-normal.txt  colored-mcpplogo-small.txt  mcpplogo-large.txt  mcpplogo-normal.txt  mcpplogo-small.txt
internal/: aes.c  aes.cpp  aes.h  arguments.cpp  arguments.h  colors.cpp  colors.h  display.cpp  display.h  importer.cpp  importer.h  message.cpp  message.h  messagememory.cpp  messagememory.h  requests.cpp  requests.h  themes.cpp  themes.h  tools.cpp  tools.h
languages/: en.json  fr.json
tests/: checkUTF8.cpp  exportcolors.sh  exportcolorsfct.sh  testaes.cpp  testchar.cpp  teststring.cpp  textcolorsdisplay.sh
themes/: defaultTheme.json  oldMicasendTheme.json
